@@ -13,6 +13,12 @@ WebHelpers ChangeLog
     ``literal``. Compatibility should not be a problem; but see the docs if
     you encounter any edge cases.
 
+* webhelpers.html.tags:
+
+  - Don't put an "id" attribute on a hidden fields generated by the ``form()``
+    helper, including the magic ``_method`` field. The IDs will clash if there
+    are multiple forms on the page.
+
 1.1 (2010-08-09)
 ----------------
 
